force-app/main/default/objects/Batch_Errors__c/Batch_Errors__c.object-meta.xml
<CustomObject>
    <label>Batch Errors</label>
    <nameField>
        <label>TEMP ERRORS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>