force-app/main/default/objects/Batch_Errors__c/fields/Failed_Batch__c.field-meta.xml
<CustomField>
    <fullName>Failed_Batch__c</fullName>
    <label>Failed Batch</label>
    <type>TextArea</type>
</CustomField>