force-app/main/default/objects/Batch_Errors__c/fields/OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>OperatingHoursId__c</fullName>
    <label>OperatingHoursId</label>
    <type>TextArea</type>
</CustomField>