force-app/main/default/objects/Batch_Errors__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <type>TextArea</type>
</CustomField>