force-app/main/default/objects/Batch_Errors__c/fields/OrderProductId__c.field-meta.xml
<CustomField>
    <fullName>OrderProductId__c</fullName>
    <label>OrderProductId</label>
    <type>TextArea</type>
</CustomField>