force-app/main/default/objects/Batch_Errors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Failed_Batch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderId__c</columns>
    <columns>OrderProductId__c</columns>
    <columns>OperatingHoursId__c</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>