force-app/main/default/objects/Batch_Errors__c/listViews/Based_on_Date_Range.listView-meta.xml
<ListView>
    <fullName>Based_on_Date_Range</fullName>
    <columns>NAME</columns>
    <columns>Failed_Batch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderId__c</columns>
    <columns>OrderProductId__c</columns>
    <columns>OperatingHoursId__c</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Based on Date Range</label>
</ListView>